better rewordings of conclusions

--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -1,19 +1,27 @@
 \chapter{Conclusions}\label{ch:conclusions}
 
+\todo{Reorder and correct this section.}
 
-The analysis exposed allowed us to show that the Risk maps we developed are of interest to national health campaigns.
+The purpose of this work was to analyze and explore howthis type of data data could be used as a surrogate to other, more traditional, methods of disease control and surveillance.
+This was done starting from the hypothesis that long-term migrations 
+are relevant to the spread of this disease out from the region source of vector-borne infections.
+It also took advantage of the georeferenced information contained in the CDR logs, where we showed how the use of this data for reasons other than logging a user\'s calling expenses demonstrates a use which is relevant to public health policies. 
+
+
+The analysis we exposed in this work allowed us to show that the Risk maps we developed are of interest to national health campaigns.
 They pinpoint to likely spots of high disease prevalence, with a low cost to produce this outcome.
 Added to this, the risk maps produced many interesting insights of specific antennas that have higher vulnerable interactions with the endemic region, where these are located outside of the endemic region.
+
+
+
+From this, we intend to provide an example of how Machine Learning tools on CDR data can help authorities with disease-control strategies in way which is not intrusive to cellphone users.
+Health-related measures can then be applied outside of the endemic region, and directed towards specific neighbourhoods and communities by using the recommendations output by the risk algorithm.
 
 Next to traditional health control actions, this research may provide a very insightful piece of information for decision-makers.
 Where the insights derived from the probabilistic models and the risk maps can help in understanding disease spread in other similar contexts.
 
 
-The use of CDRs for reasons other than logging a user\'s calling expenses helps to showcase an interesting use of this data.
-
-interesting ways of using the
-
-Capturing long-term human movements will also enable better simulations of disease spreads in different contexts.
+We think that capturing long-term human movements will also enable better simulations of disease spreads in different contexts.
 In this work, the impact of this in our predictive capacity of disease prevalence is shown.
 
 
