minor synthax corrections

--- a/ch_results.tex
+++ b/ch_results.tex
@@ -199,7 +199,7 @@ As we will see later in \cref{tab:master_table_results}, \cref{target2} happened
 
 \todo{Add that random Forests improving decision tree overfitting. Gradient Boosting better in bias with a slight incrase in overfit}
 
-
+\todo{ Using best features from random forests in gradient boosting models incorporates some overfitting in the model since we use target information to select the best features. However, independent experiments confirm the performance of gradient tree boosting methods.}
 
 
 
@@ -212,14 +212,13 @@ As we will see later in \cref{tab:master_table_results}, \cref{target2} happened
     \item [DONE] Feature importance. Mobility and phone usage were, surprisingly, relevant attributes in most of the experiments run.
     \item [DONE] The map attributes were confirmed to be relevant by the best-feature ranker for random forests/ gradient tree boosting algorithms.
 
+    \item Whole Random Forest and Gradient Boosting results from the experiments.
+
     \item What's the predictive performance of CDRs for the long-term migrations problem?
 
 \end{description}
 
 
-
-
-\todo{ Using best features from random forests in gradient boosting models incorporates some overfitting in the model since we use target information to select the best features. However, independent experiments confirm the performance of gradient tree boosting methods.}
 
 
 
