--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -25,7 +25,7 @@ We think that capturing long-term human movements will also enable better simula
 In this work, the impact of this in our predictive capacity of disease prevalence is shown.
 
 
-We believe it is acceptable to say that long-term human dynamics in the form of migration patterns can be captured by the use of this data.
+Also, we find acceptable to say at this point that long-term human dynamics in the form of migration patterns can be captured by the use of this data.
 Since this work was performed in two Latin-American countries and in one single endemic region, we expect that this CDR usage can be extended to other similar countries and diseases, with demographic, cultural and geographical similarities beyond Chagasic spread in Mexico or Argentina.
 
 
