fix bad use of apostrophe synthax

--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -378,7 +378,7 @@ Groupings and filters are applied only on the user's calls:
 
 \begin{table}[ht]
 	\caption{An example list of features that were built from the social graph dataset.
-Each attribute has it\'s code name and a description of the codes used to construct its name.}\label{tab:data_example}
+Each attribute has its code name and a description of the codes used to construct its name.}\label{tab:data_example}
 	\footnotesize
 	\centering
 	\begin{tabular} {|p{1.5cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{2cm}|p{1.5cm}|p{1cm}}
