--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -505,7 +505,7 @@ They are used as a metric or score of the quality of the model, in this case $\t
 They define the evaluation space of the learner. 
 
 \begin{definition}{\textbf{Loss Function.}}
-The loss function of a model $l: \mathbb{R}^{ p} \rightarrow  \mathbb{R} $ maps the model's parameters to quantify a model\'s error when using parameter $\theta$.
+The loss function of a model $l: \mathbb{R}^{ p} \rightarrow  \mathbb{R} $ maps the model's parameters to quantify a model's error when using parameter $\theta$.
 \end{definition}
 
 In all cases, the loss function will define the underlying optimization procedure behind the algorithmic procedure. 
@@ -525,7 +525,7 @@ In this way we could compare the performance of that model to the one built by a
 %In this way we are constructing a way of determining how to select a model from the data.
 
 For the case of \cref{eq:logLossFunction} we have that it is a negative, concave, monotone increasing function with the estimated probability output by the classifier.
-Finally, to fit our model\'s $\theta$ we would optimize using first or second-order methods. More details on this are given in \cref{appx:sec:loglossDetails}.
+Finally, to fit our model's $\theta$ we would optimize using first or second-order methods. More details on this are given in \cref{appx:sec:loglossDetails}.
 
 
 
