--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -139,7 +139,7 @@ Note that this is a related to limit on branch depth.
 \end{itemize}
 
 
-Intuitively, it is natural to find that trees of longer depth will overfit the data since more complex interactions among variables will be captured by refining the partition on input space.
+Intuitively, it is natural to find that trees of longer depth will overfit the data since more complex interactions among variables will be captured by refining the input space partition.
 A trivial example is to allow a tree to grow fully in depth to later assign to each sample in the training set its own self-contained region.
 This yields a model with virtually zero bias yet with a very high prediction error.
 In \cref{figure:dtree_overfit_problem_2} we give an example of an overfit decision tree on the CDR dataset for \cref{target2} where the overly-complex model produces poor generalization error.
@@ -166,9 +166,9 @@ For a broad characterization of decision trees and their construction in classif
 We present here a run of the a decision tree over $\mathcal{T}$.
 In this case the \cref{target2} was used as an example.
 The tree was built using a standard configuration with a low depth of 5 and a Gini splitting criteria.
-We allowed the algorithm to select any feature $X^j$ at each split decision. 
+At each decision node, we configured the algorithm to be able to select any feature $X^j$ to perform the split. 
 Also, we configured the minimum split threshold to be of $20$ samples.
-This meant that no further splits were created when less than this number of samples was at that node.
+This meant that no further splits were created when less than this number of samples was left at that node.
 Under this setup, the algorithm ran in approximately 15 seconds.
 \cref{fig:decision_tree_actual_problem} shows a partial representation of the actual decision tree grown on \cref{target2}.
 This allows us to see how the algorithm selects better features at low-level nodes, versus the deeper splits.
@@ -197,17 +197,17 @@ This allows us to see how the algorithm selects better features at low-level nod
 
 
 From \cref{fig:decision_tree_actual_problem} we can approximate which features are most important to the algorithm when deciding a node split, given by the Gini splitting criteria.
-Given that in \cref{target2} we are looking for people that migrated in any direction, the choice of the tree\'s root feature is not surprising.
+Given that in \cref{target2} we are looking for people that migrated in any direction, the choice of the tree's root feature is not surprising.
 The mobility diameter gives an idea of a user's influence area when using his mobile phone and as such, this attribute might indicative of past migrations.
-Subsequently, the usage volume of a user\'s home antenna appears as the second most important features, both during the weeknight and during the whole day.
+Subsequently, the usage volume of a user's home antenna appears as the second most important features, both during the weeknight and during the whole day.
 Yet the error score out by this tree yields a poor performance.
 Evaluated with the $Accuracy$ metric, we see $43.2\%$ result with this model which shows very poor prediction error over all of the samples.
 With this score, noting which features were selected near the root leaves of the tree would not be very informative to the overall problem.
 
 We decide to iterate once again on this model, but now slightly changing the hyperparameter which controls the balance of $\mathcal{T}$.
-The reason for this is that with the current task, the positive and negative classes have a disproportionate balance of samples and this is reflected in the overall model\'s poor performance.
+The reason for this is that with the current task, the positive and negative classes have a disproportionate balance of samples and this is reflected in the overall model's poor performance.
 For this reason, we modified the setup of the loss function of the tree to weigh more samples from the under-represented class over the samples from the abundant group.
-For each sample, it\'s loss weight was adjusted by it\'s class representation ratio.
+For each sample, it's loss weight was adjusted by it's class representation ratio.
 With this, the new run scored a $57.9\%$ $Accuracy$ error score which is more than a $15\%$ increase over the previous score.
 Still, this is considered a very poor model for supervised learning.
 
@@ -245,7 +245,7 @@ So to tackle most of the disadvantages described by this technique, \textit{Rand
 
 Random Forests are estimators that extend from constructing a group of single decision trees and then combining them to produce a single output decision.
 This grouping of lots of classifieres is what is known as an \textit{ensemble}.
-The objective in this construction is to focus on decision tree\'s low bias whilst controlling their overfit as much as possible.
+The objective in this construction is to focus on decision tree's low bias whilst controlling their overfit as much as possible.
 For this, a forest of single trees will be constructed in such a way that correlations among each of the individual models is limited as much as possible.
 And this is because each individual model will learn on a random subset of features or samples and then, an average of the single outputs will be used as the forest's target output to preserve single estimator's interdependence as much as possible.
 There  are other different techniques that intent to construct uncorrelated trees which are combined at the output, yet the main idea is common to all.
@@ -467,7 +467,7 @@ In the general procedure, we cross validated the same possible hyperparameter co
 
 The full experiment ran two different tasks, where each was characterized by the attributes used for our $X$ dataset.
 In the first one, the procedure ran with all available features and in the second one we separated the features that had a high correlation, bigger than $0.3$, with the target variable.
-This means we removed all of the features that counted the user\'s vulnerable neighbors for a given month, segmented by the direction of the call.\footnote{For a complete description on the definition of these features, please refer to \cref{tab:data_example}.}
+This means we removed all of the features that counted the user's vulnerable neighbors for a given month, segmented by the direction of the call.\footnote{For a complete description on the definition of these features, please refer to \cref{tab:data_example}.}
 Recall that all of these features were central in the construction of the risk maps in \cref{section:riskmaps}.
 The color of each antenna's circle represented the amount of vulnerable users, for that given month, when looking at the incoming or outgoing calls.
 Then, these feature's correlation to the target variable are indicative, up-to a certain point, of the predictive power of them.
