--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -5,7 +5,7 @@
 The purpose of this work was to analyze and explore howthis type of data data could be used as a surrogate to other, more traditional, methods of disease control and surveillance.
 This was done starting from the hypothesis that long-term migrations 
 are relevant to the spread of this disease out from the region source of vector-borne infections.
-It also took advantage of the georeferenced information contained in the CDR logs, where we showed how the use of this data for reasons other than logging a user\'s calling expenses demonstrates a use which is relevant to public health policies. 
+It also took advantage of the georeferenced information contained in the CDR logs, where we showed how the use of this data for reasons other than logging a user's calling expenses demonstrates a use which is relevant to public health policies. 
 
 
 The analysis we exposed in this work allowed us to show that the Risk maps we developed are of interest to national health campaigns.
