--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -227,8 +227,8 @@ The figure for this model is shown below.
 
 \smallskip
 
-From \cref{fig:decision_tree_actual_problem2} the importance of the mobility diameter is more clear.
-Once again the learner uses it as the first split in the data, even with balanced samples.
+The importance of the mobility diameter becomes clearer in \cref{fig:decision_tree_actual_problem2}.
+Once again the learner selects this attribute as the first split in the data, and this time with balanced samples.
 Recall that by the stochastic nature of the algorithm building the tree, two runs with the same hyperparameter settings and data, need not output the same trees.
 In this case however, it is notable that the final tree still uses the mobility as the first split in the data, even with balanced samples.
 And the same can be said of the feature representing the count of calls made from the home antenna.
