--- a/ch_results.tex
+++ b/ch_results.tex
@@ -25,12 +25,12 @@
 The idea of this chapter is to present a combined overview of the work done and the results encountered in
 \cref{ch:descr-risk,ch:machineLearning,ch:modelSelection,ch:ensembleMethods}.
 All in all, we intend to showcase most of the relevant information from the preceding sections.
-The overall picture of this work shows that there is evidence to confirm the hypothesis which stipulates that cellphone usage logs are rich in social interactions and in turn, these interactions are informative enough on long-term migrations and human mobility.
+The overall picture of this work shows that there is evidence to confirm the hypothesis which stipulates that cell phone usage logs are rich in social interactions and in turn, these interactions are informative enough on long-term migrations and human mobility.
 
 % A summary of the work done we can say we have discussed issues on the most of the following items:
 
 In \cref{ch:descr-risk} we presented the CDR dataset and how it was relevant to the problem.
-We showed how the data contained dynamic georeferrenced data at the user level.
+We showed how the data contained dynamic georeferenced data at the user level.
 
 With a minuscule sample of the CDRs we showed that the dataset is rich in social interactions between users.
 This gave us an idea of how this type of data could be leveraged to the general problem.
@@ -41,12 +41,12 @@ This also implied that we had a very correlated problem, where most users did no
 This information, combined with the local calling nature, meant that we had correlations with the target feature.
 This was noted by seeing that users living in the endemic region will most probably have lived there in the past as well.
 
-In later sections we also noted that this strong past-to-present correlation in user's homes was relevant to the prediction problems. 
+In later sections we also noted that this strong past-to-present correlation in user's homes was relevant to the prediction problems.
 This is because for tree based learners, knowing where the user lived in the present, was a strong indicator of where the user would be living in the past.
-This information provided the algorithms with features that were highly informative. 
-Yet we decided to exclude this attribute for the problem of predicting a user's past home endemic condition because we wanted to evaluate the information present in other, less trivial, features. 
+This information provided the algorithms with features that were highly informative.
+Yet we decided to exclude this attribute for the problem of predicting a user's past home endemic condition because we wanted to evaluate the information present in other, less trivial, features.
 
-Moreso, we found other variables having mild interactions with the condition of being a past endemic user. 
+Moreso, we found other variables having mild interactions with the condition of being a past endemic user.
 As expected, people with high mobile interactions with the endemic region, in the form of calls durations and calls counts, also resulted in attributes which were related to users having past endemic homes.
 This is most probably due to the locality effect in calling patterns, where most interactions between TelCo users occur in local regions.
 Thus users living in endemic regions would call other users nearby.
@@ -60,7 +60,7 @@ As a starting point we transformed the user-level data into a dataset at the ant
 This step aggregated information of call patterns to and from the endemic region.
 It allowed us to present geolocalized visualizations of these social interactions to the vulnerable areas.
 As an intermediate step in this process we had to introduce the definitions that we later used for the rest of this work.
-We technically set what we meant was a vulnerable interaction and what we find is a user\'s home antenna.
+We technically set what we meant was a vulnerable interaction and what we find is a user's home antenna.
 
 % For the latter we base
 
@@ -74,7 +74,7 @@ We also found out that the level of vulnerable interactions per antenna graduall
 We say this is expected behavior because it is consistent with findings in the literature in which most calls are done to other local antennas. %in general of a local nature.
 Given this period and TelCo of analysis, we saw that ninety percent of the users limited usage to at most four Telco antennas.
 
-We also discovered some unexpected findings that were higlighted by the risk maps.
+We also discovered some unexpected findings that were highlighted by the risk maps.
 Interactions from non-endemic antennas towards those in the endemic region were seen to be non-homogeneous in some areas.
 As an example, \cref{fig:amba_map} outlines various antennas with higher vulnerability.
 We suspect this non-uniformity in the vulnerable interactions can help detect communities with higher probability of disease prevalence.
@@ -111,25 +111,25 @@ At the same time we introduced other relevant concepts in the Machine Learning a
 As is common in the literature, in \cref{figure:dtree_overfit_problem_2} we saw that increasing a decision tree's complexity leads to a clear case of overfitting the training data when trying to approximate the generalization error.
 
 The same procedure was used to illustrate the concept of ``Cross Validation'' in \cref{fig:cv_vs_test_score}.
-We found that when making predictions on wich users were endemic in the past endemic, the test score was inside a one standard deviation band of the CV score, across a varying hyperparameter value for the Logistic Regression classifier.
-These findings are consistent with lots of other experiments found in the literature where by cross validating the search of optimal hyperparamters, we can have a fair estimation of the test error. 
+We found that when making predictions on which users were endemic in the past endemic, the test score was inside a one standard deviation band of the CV score, across a varying hyperparameter value for the Logistic Regression classifier.
+These findings are consistent with lots of other experiments found in the literature where by cross validating the search of optimal hyperparamters, we can have a fair estimation of the test error.
 
 
 Towards the end of \cref{ch:modelSelection} we performed an extensive experimentation with this same problem and also on users that moved out of the endemic region.,
- % which characterized unidirectional migrants, from the endemic region. 
-For this we used the same classifier as before but on the whole dataset in what defined our sysmetatic approach of analyzing classifiers performance.
-% through cross validation, hyperparameter error assesment, feature selections through iterations and visualization of validaction curves.
+ % which characterized unidirectional migrants, from the endemic region.
+For this we used the same classifier as before but on the whole dataset in what defined our systematic approach of analyzing classifiers performance.
+% through cross validation, hyperparameter error assessment, feature selections through iterations and visualization of validation curves.
 
  % and found we did this on the whole dataset in an approach which defined systematic procedure.
 % In here we finished testing the Logistic Classifier on the whole dataset, and with a systematic approach.
 
 The runtime for this experiment had a lower bound of one and a half hours.
 This was for all of the cross-validated fits and for the whole set.
-Also since we limited the number of iterations to at most one hundred steps, this runtime is actually smaller than the the real optimization time for this algorithm, 
+Also since we limited the number of iterations to at most one hundred steps, this runtime is actually smaller than the the real optimization time for this algorithm,
 
-Another issue found with this algorithm was its extremely poor $F1$ performance for unidirectional migrants. 
+Another issue found with this algorithm was its extremely poor $F1$ performance for unidirectional migrants.
 We found that it had a test score lower than $0.01\%$.
-As we will see later in other statistical leaners, we had that
+As we will see later in other statistical learners, we had that
 the overall precision of the classifier was very poor due to not being able to accurately predict positive samples.
 The algorithm was very inefficient in this aspect of overestimating users that migrated out of the endemic region, and this misclassification had a direct impact in the observed $F1$.
 
@@ -152,11 +152,11 @@ If we recall the highly unbalanced class relations for the problem of predicting
 
 Overall, both procedures had best fits on the more regularized $C$values.
 A similar result can be found for regularization models and on procedures where hyperparameters were cross validated.
-Both optimizations improved improved the models predictive power in varying degrees.
+Both optimizations improved improved the model's predictive power in varying degrees.
 
 
 The previous results outline a complete systematical Machine Learning approach and toolset used to evaluate the long-term migrations prediction problem.
-In this way we provide a methodical way to analyze classifiers perfroming on this problem.
+In this way we provide a methodical way to analyze classifiers performing on this problem.
 With this we tackled the task with the introduction of new algorithms in the following chapters.
 
 
@@ -174,28 +174,58 @@ As a start, we showed through a validation curve that, for the problem of users 
 We had that the cross-validated scores and the test scores diverged rapidly after a tree-depth of $7$ and this is plotted in \cref{figure:dtree_overfit_problem_2}.
 The wide gap in the scores resulted in a difference larger than $0.3\%$.
 
-This result is not surprising in the sense that Decision Trees are known to become highly complex and overfitting models after growing to a certain depth. 
-% Ideally it serves as an example of what aspects of this greedy algorithm are enhanced by Random Forests. 
+This result is not surprising in the sense that Decision Trees are known to become highly complex and overfitting models after growing to a certain depth.
+% Ideally it serves as an example of what aspects of this greedy algorithm are enhanced by Random Forests.
 
 We also fit two Decision Tree instances for the same problem to evaluate the model with an $Accuracy$ score.
-The first of two fits was ran over a smaller hyperparameter configuration.
+The first of two fits was ran over a smaller hyperparameter configuration and, in particular, this configuration did not consider a rebalancing of the samples when computing the value of the loss function over the whole set.
+The second fit was done with this balancing to account on how this difference affects the algorithm's outcome.
 
-In particular, this configuration did not consider a rebalancing of the samples when computing the loss function over the whole set.
+To aid our understanding of this model's outcome we also decided to create visualizations for both fitted trees.
+Each tree is plotted in a graph which shows up to five levels of splits.
+With this we showed, for each node, the attribute used in that splitting decision and the actual split value.
+
+These plots provided some insights into what features were initially being used by the algorithm to separate samples, according to their split index performance.
+For instance, in both fits the root split was based on the user's mobility diameter, with split values near to $47.5$ kilometres in both cases.
+This means that a mobility diameter of $47.5$ was the best split decision the algorithm could take in order to improve the gini index of the sub groups.
+Recall here that the mobility diameter quantifies the user's area of influence given by his mobile connection.
+
+The other significant features, selected at splits near to the tree's root level, was the user's home antenna call count.
+Both the volume of calls during the whole week and usage specifically during weeknights time was important to the node-splitting algorithm.
+
+For both trees, the split values for these two variables were relatively similar, where in the volume of weeknight calls using the home antenna was of $10.5$, whilst for total volume of home antenna calls, at any given time, the values were $139$ and $186$ calls for each case.
+These split values were characterizing segments of heavy users, that is users that are higher than the median values for the home antenna usage variables.% on the upper usage percentiles for home antennas.
+
+% This result makes does not strike as wild as
+% Still this result does not imply that all split all users
+ % It seems that a big area when using his mobile phone and as such, this attribute might indicative of past migrations.
 
 
-idea was
- and plotted their output in a graph which shows up to five levels of splits.
+Here we must note however, that both best-fit trees result in a low $Accuracy$ scores of $43.2\%$,and $57.9\%$ respectively.
+Under these circumstances we find that these top features selected when building the trees could not be very informative of the overall problem in users that migrated out of the endemic region.
+This means that, due to the low performance of these learners, the interpretations we build from this output can be based from the wrong assumptions.
 
-We showed for each node the attribute used in that splitting decision and the actual split value.
-Doing this provided some insights into what features were initially being used by the algorithm to separate samples, according to their split index performance.
-Still, given the low $Accuracy$ scores for both fits ($43.2\%$,and $57.9\%$)
-Interestingly enough, we found that
 
-All of these methods were successively compared on the same difficult task of prediting users that migrated out of the endemic region from $T_0$ to $T_1 $.
-This common ground for all algorithms settled a common base ground comparison for the methods. 
+% we could be tempted to interpret the
+
+Interestingly enough, in these experiments we found that for this learner, rebalancing the set helped us increase the learner's score by a great amount.
+We hypothesize that this is an important setting to be used in cases where the target classes are imbalanced.
+% With this score, noting which features were selected near the root leaves of the tree would not be very informative to the overall problem.
+% Experiments with the Decision Tree was used  
+
+
+
+The rest of the \cref{ch:ensembleMethods} follows with the presentation of other learners.
+All of them are introduced with a brief explanation of their formulation and their distinctive characteristics.
+
+For each of these, we successively experiment the same difficult predictive task.
+Where we look to tag users that migrated out of the endemic region, from time periods $T_0$ to $T_1$.
+In this way se set a common ground to compare and evaluate the algorithms.
 % settled to compare and evaluate them on common ground.
 
-As we will see later in \cref{tab:master_table_results}, \cref{target2} happened to be the hardest task of all, where all classifiers had their lowest scores.
+As we will see later in \cref{tab:master_table_results}, this task, \cref{target2}, happened to be the hardest one, as it resulted in the worst metric scores for all classifiers.
+
+
 
 % By comparing this problem over the various tree methods we discuss on applications that these kind of datasets can provide.
 % to these kinds of tasks was elaborated.
@@ -205,14 +235,14 @@ As we will see later in \cref{tab:master_table_results}, \cref{target2} happened
 
 
 
-
 \todo{ Using best features from random forests in gradient boosting models incorporates some overfitting in the model since we use target information to select the best features. However, independent experiments confirm the performance of gradient tree boosting methods.}
 
 
 
 
 
-In all, we can say that for the prediction tasks, the feature selection heuristics of ensemble algorithms did agree upon a group of features.
+
+In summary, we can say that for the prediction tasks, the feature selection heuristics of ensemble algorithms did agree upon a group of features.
 These were highlighted over the rest for a number of times and they provide insight into what CDR information provided most
 predictive value.
 
@@ -222,7 +252,7 @@ From the results we collected, the best features can be broken down into the fol
 
     \item Calls made in older months and in December: Interactions of different type, that occured closer to the split month between both periods $T_0$ and $T_1$ (July), were also distinguished.
     The model frequently used interactions from the months of August and September, as well as December.
-    We conjecture that this last result can be due to the fact that December is a month where user\'s increase their mobile activity with their families.
+    We conjecture that this last result can be due to the fact that December is a month where user's increase their mobile activity with their families.
 
     \item Vulnerable calling patterns: As we first suspected in \cref{ch:descr-risk}, the vulnerability of the mobile interaction between users was relevant.
     Measurements such as the duration and volume of calls at different time periods where selected.
