--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -613,7 +613,7 @@ Added to this,
 
 The biggest difference between the test and average CV scores among all models was of 4\% yet still the algorithm very poor performance when finding samples of the positive class.
 This is evidenced in the extremely low value for the $Precision$ scores where only a handful of positive classes can be correctly captured by the model.
-The effect of the low precision is also evident in the $F1$ score which drags this metric to extremely poor levels, even when the recall is has an acceptable rate of 0.65.
+The effect of the low precision is also evident in the $F1$ score which drags this metric to extremely poor levels, even when the $Recall$ has an acceptable rate of 0.65.
 This is a strong indicator of a very ill-condition problem, where the class imbalance strongly affects the detection of positive cases over all positive predictions made.
 
 Keeping all of the above in mind, in practice the experimenter would chose the metric which would be most appropriate for the task at hand.
