--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -2,6 +2,8 @@
 
 \todo{Reorder and correct this section.}
 
+\todo{Reorder paragraphs, reword sentences. Expand, correct and finish them in a cohesive structure.}
+
 The purpose of this work was to analyze and explore howthis type of data data could be used as a surrogate to other, more traditional, methods of disease control and surveillance.
 This was done starting from the hypothesis that long-term migrations 
 are relevant to the spread of this disease out from the region source of vector-borne infections.
